--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/cake.jpg" alt="">
+							<img class="img-responsive" src="./img/blog2.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
