--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/wisdom2018schoene_2.jpg" alt="">
+							<img class="img-responsive"  src="./img/kdd_blog.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
