--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ we research interactive systems for dementia.</p>
 								<li><i class="fa fa-clock-o"></i>13 Sep 2018</li>
 							</ul>
 							<h3>British Science Festival</h3>
-							<p>David Benoit from Chemistry and Nina Dethlefs gave a talk at the 
+							<p>David Benoit from Physics and Nina Dethlefs gave a talk at the 
 							British Science Festival on "Let the AI In".</p>
 							<a href="news-science_festival.html">Read more</a>
 						</div>
