--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ we research interactive systems for dementia.</p>
 					<h2 class="title">News, Projects and Activities</h2>
 				</div>
 				<!-- /Section header -->
-
+				
 				<!-- blog -->
 				<div class="col-md-4">
 					<div class="blog">
@@ -466,7 +466,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/kdd_blog.jpg" alt="">
+							<img class="img-responsive"  src="./img/wisdom2018schoene_2.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
@@ -512,7 +512,7 @@ we research interactive systems for dementia.</p>
 								<li><i class="fa fa-clock-o"></i>13 Sep 2018</li>
 							</ul>
 							<h3>British Science Festival</h3>
-							<p>David Benoit from Physics and Nina Dethlefs gave a talk at the 
+							<p>David Benoit from Chemistry and Nina Dethlefs gave a talk at the 
 							British Science Festival on "Let the AI In".</p>
 							<a href="news-science_festival.html">Read more</a>
 						</div>
