--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@ we research interactive systems for dementia.</p>
 					</div>
 				</div>
 				<!-- /blog -->
-
+				</div>
+				
 				<!-- blog -->
 				<div class="col-md-4">
 					<div class="blog">
