--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@ we research interactive systems for dementia.</p>
 				<!-- /blog -->
 				</div>
 				
+				<div class="row">
 				<!-- blog -->
 				<div class="col-md-4">
 					<div class="blog">
