--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -104,7 +104,7 @@
 				<main id="main" class="col-md-9">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/blog-post.jpg" alt="">
+							<img class="img-responsive" src="./img/blog2.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
@@ -112,15 +112,13 @@
 								<li><i class="fa fa-clock-o"></i>17 Sep 2018</li>
 							</ul>
 							<h3>Welcome and (big data) cake</h3>
-							<p>Today we welcomed 4 researchers to our group -- 
+							<p>Today we welcomed 3 researchers to our group -- 
 							<a href="joyjit.html">Joyjit Chatterjee</a>, 
-							<a href="luana.html">Luana Mincarelli</a>,
-							<a href="eva.html">Eva Sousa</a>,									and 					
+							<a href="luana.html">Luana Mincarelli</a>, and 					
 							<a href="josh.html">Joshua Whiting</a>.</p>
 							
 							<p>All four will be based in our Milner Lab and work on deep learning 
-							projects, interactive systems and knowledge representation, computational biology and 
-							tumour detection from PET scans. </p>							
+							projects, interactive systems and knowledge representation and computational biology. </p>							
 							
 						</div>
 
