--- a/alex.html
+++ b/alex.html
@@ -213,7 +213,18 @@ I later returned to the University of York as a research associate in the Intell
 								<li>13 Sep 2018</li>
 							</ul>
 						</div>
-						<!-- /single post -->												
+						<!-- /single post -->					
+						
+					<!-- single post -->
+						<div class="widget-post">
+							<a href="https://theconversation.com/ai-theres-a-reason-its-so-bad-at-conversation-103249">
+								<img src="./img/conversation_post.jpg" alt=""> The Conversation
+							</a>
+							<ul class="blog-meta">
+								<li>17 Sep 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->													
 											
 
 					</div>
