--- a/news-ibm.html
+++ b/news-ibm.html
@@ -206,6 +206,16 @@ Returning back to University to complete my PhD, I hope I'll be able to build on
 						</div>
 						<!-- /single post -->										
 											
+					<!-- single post -->
+						<div class="widget-post">
+							<a href="https://theconversation.com/ai-theres-a-reason-its-so-bad-at-conversation-103249">
+								<img src="./img/conversation_post.jpg" alt=""> The Conversation
+							</a>
+							<ul class="blog-meta">
+								<li>17 Sep 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->												
 
 					</div>
 					<!-- /Posts sidebar -->
