--- a/news-science_festival.html
+++ b/news-science_festival.html
@@ -131,25 +131,15 @@
 				</div>
 				<!-- /Section-header -->
 
-				<!-- contact -->
 				<div class="col-sm-5">
-					<div class="contact">
 					<img class="img-responsive" src="./img/bsf5.jpg" alt="" width="400">
-					</div>
 				</div>
-				<!-- /contact -->
 
-				<!-- contact -->
 				<div class="col-sm-5">
-					<div class="contact">
 					<img class="img-responsive" src="./img/bsf4.jpg" alt="" width="400">
-					</div>
 				</div>
-				<!-- /contact -->
 
 
-
-				<!-- /contact form -->
 
 			</div>
 			<!-- /Row -->
@@ -223,6 +213,16 @@
 						</div>
 						<!-- /single post -->										
 											
+					<!-- single post -->
+						<div class="widget-post">
+							<a href="https://theconversation.com/ai-theres-a-reason-its-so-bad-at-conversation-103249">
+								<img src="./img/conversation_post.jpg" alt=""> The Conversation
+							</a>
+							<ul class="blog-meta">
+								<li>17 Sep 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->												
 
 					</div>
 					<!-- /Posts sidebar -->
