--- a/news-alex-epsrc.html
+++ b/news-alex-epsrc.html
@@ -232,6 +232,16 @@
 						</div>
 						<!-- /single post -->												
 											
+					<!-- single post -->
+						<div class="widget-post">
+							<a href="https://theconversation.com/ai-theres-a-reason-its-so-bad-at-conversation-103249">
+								<img src="./img/conversation_post.jpg" alt=""> The Conversation
+							</a>
+							<ul class="blog-meta">
+								<li>17 Sep 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->	
 
 					</div>
 					<!-- /Posts sidebar -->
