--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -124,6 +124,9 @@
 							projects, interactive systems and knowledge representation and computational biology. </p>							
 							
 						</div>
+						
+					<img class="img-responsive" src="./img/group1.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/group2.jpg" alt="" width="400">											
 
 			<!-- Row -->
 			<div class="row">
