--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/conversation.jpg" alt="">
+							<img class="img-responsive"  src="./img/conversation_blog.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
