--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -125,8 +125,8 @@
 							
 						</div>
 						
-					<img class="img-responsive" src="./img/group1.jpg" alt="" width="600">
-					<img class="img-responsive" src="./img/group2.jpg" alt="" width="600">											
+					<img class="img-responsive" src="./img/groupa.jpg" alt="" width="600">
+					<img class="img-responsive" src="./img/groupb.jpg" alt="" width="600">											
 
 
 
