--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -120,7 +120,7 @@
 							<a href="josh.html">Joshua Whiting</a>.</p>
 							
 
-							<p>All four will be based in our Milner Lab and work on deep learning 
+							<p>All three will be based in our Milner Lab and work on deep learning 
 							projects, interactive systems and knowledge representation and computational biology. </p>							
 							
 						</div>
