--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -142,6 +142,25 @@
 					<img class="img-responsive" src="./img/groupb.jpg" alt="" width="400">
 				</div>
 
+			</div>
+			<!-- /Row -->
+
+			<!-- Row -->
+			<div class="row">
+
+				<!-- Section-header -->
+				<div class="section-header text-center">
+				</div>
+				<!-- /Section-header -->
+
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/bsf5.jpg" alt="" width="400">
+				</div>
+
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/bsf4.jpg" alt="" width="400">
+				</div>
+
 
 
 			</div>
