--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -129,7 +129,7 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/bsf5.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/groupa.jpg" alt="" width="400">
 				</div>
 
 				<div class="col-sm-5">
