--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -132,11 +132,11 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/groupa.jpg" alt="" width="200">
+					<img class="img-responsive" src="./img/blog2.jpg" alt="" width="400">
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/bsf4.jpg" alt="" width="200">
+					<img class="img-responsive" src="./img/blog2.jpg" alt="" width="400">
 				</div>
 
 			</div>
