--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -136,7 +136,7 @@
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/blog2.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/group2.jpg" alt="" width="400">
 				</div>
 
 			</div>
