--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- Header -->
 	<header id="home">
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/group-background.jpg');">
+		<div class="bg-img" style="background-image: url('./img/background1.jpg');">
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
@@ -353,7 +353,7 @@ we research interactive systems for dementia.</p>
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>Joyjit Chatterjee</h3>
+							<a href="joyjit.html"><h3>Joyjit Chatterjee</h3></a>						
 							<span>PhD Student</span>
 						</div>
 					</div>
