--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -111,6 +111,7 @@
 								<li><i class="fa fa-user"></i><a href="nina.html">Nina Dethlefs</a></li>
 								<li><i class="fa fa-clock-o"></i>17 Sep 2018</li>
 							</ul>
+										<img class="img-responsive" src="./img/annika-cake.jpg" alt="" width="100" align="right">																								
 							<h3>Welcome and (big data) cake</h3>
 							<p>Today we welcomed 3 researchers to our group -- 
 							<a href="joyjit.html">Joyjit Chatterjee</a>, 
