--- a/index.html
+++ b/index.html
@@ -324,15 +324,14 @@ we research interactive systems for dementia.</p>
 						<div class="team-img">
 							<img class="img-responsive" src="./img/nopic.jpg" alt="">
 							<div class="overlay">
-											<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+									<div class="team-social">
+									<a href="mailto:a.dulian@2013.hull.ac.uk"><i class="fa fa-envelope"></i></a>
+									<a href="https://www.linkedin.com/in/albert-dulian-a3a78412a/"><i class="fa fa-linkedin-square" ></i></a>
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>Albert Dulian</h3>
+							<a href="albert.html"><h3>Albert Dulian</h3></a>						
 							<span>PhD Student</span>
 						</div>
 					</div>
