--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@ we research interactive systems for dementia.</p>
 									<div class="team-social">
 									<a href="mailto:a.dulian@2013.hull.ac.uk"><i class="fa fa-envelope"></i></a>
 									<a href="https://www.linkedin.com/in/albert-dulian-a3a78412a/"><i class="fa fa-linkedin-square" ></i></a>
+									<a href="albert.html"><i class="fa fa-user"></i></a>																		
 								</div>
 							</div>
 						</div>
@@ -348,6 +349,7 @@ we research interactive systems for dementia.</p>
 									<a href="mailto:J.Chatterjee-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a>																			
 									<a href="https://scholar.google.co.in/citations?user=7-5iqlYAAAAJ&hl=en"><i class="fa fa-google"></i></a>
 									<a href="https://www.linkedin.com/in/joyjitchatterjee?trk=prof-samename-picture&originalSubdomain=in"><i class="fa fa-linkedin-square" ></i></a>
+									<a href="joyjit.html"><i class="fa fa-user"></i></a>																											
 								</div>
 							</div>
 						</div>
@@ -366,13 +368,12 @@ we research interactive systems for dementia.</p>
 				<div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
-							<img class="img-responsive" src="./img/nopic.jpg" alt="">
+							<img class="img-responsive" src="./img/josh.jpg" alt="">
 							<div class="overlay">
-							<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+									<div class="team-social">
+									<a href="mailto:J.Whiting-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a>																			
+									<a href="josh.html"><i class="fa fa-user"></i></a>																											
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
