--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
-							<img class="img-responsive" src="./img/josh.jpg" alt="">
+							<img class="img-responsive" src="./img/josh1.jpg" alt="">
 							<div class="overlay">
 									<div class="team-social">
 									<a href="mailto:J.Whiting-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a>																			
@@ -377,7 +377,7 @@ we research interactive systems for dementia.</p>
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>Joshua Whiting</h3>
+							<a href="josh.html"><h3>Joshua Whiting</h3></a>													
 							<span>MSc (Research) Student</span>
 						</div>
 					</div>
