--- a/josh.html
+++ b/josh.html
@@ -104,7 +104,7 @@
 					<div class="blog">
 						<div class="blog-img">
 						<div class="media-left">
-									<img class="media-object" src="./img/josh.jpg" alt="" width="400">
+									<img class="media-object" src="./img/josh1.jpg" alt="" width="400">
 								</div>
 						</div>
 						
