--- a/index.html
+++ b/index.html
@@ -470,6 +470,73 @@ we research interactive systems for dementia.</p>
 				</div>
 				<!-- /Section header -->
 				
+				<div class="row">
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/epinet.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="alex.html">Alex</a></li>
+								<li><i class="fa fa-clock-o"></i>22 Oct 2018</li>
+							</ul>
+							<h3>Post-doctoral research assistant - 15 Nov</h3>
+							<p>We're recruiting for a post-doctoral research assistant to work on 
+							an EPSRC-funded project on <a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/S003207/1">Transparent AI</a>. 
+							See <a href="https://jobs.hull.ac.uk/Vacancy.aspx?ref=FS0392">here</a>. 
+							Deadline 15 Nov 2018.</p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/water_sensing.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="nina.html">Nina</a></li>
+								<li><i class="fa fa-clock-o"></i>23 Oct 2018</li>
+							</ul>
+							<h3>PhD scholarship - Deep learning for water sensing</h3>
+							<p>We're recruiting a PhD student on a 3-year fully-funded scholarship on 
+							data analytics (particularly deep learning) for water sensing.
+							See <a href="https://www.findaphd.com/search/ProjectDetails.aspx?PJID=101703">here</a>. 
+							Deadline 23 Jan 2019.</p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/flood.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="nina.html">Nina</a></li>
+								<li><i class="fa fa-clock-o"></i>23 Oct 2018</li>
+							</ul>
+							<h3>PhD scholarship - Deep learning for flood risk mapping</h3>
+							<p>We're recruiting a PhD student on a 3-year fully-funded scholarship on 
+							data analytics from IoT devices for modelling  flood risks.
+							See <a href="https://www.findaphd.com/search/ProjectDetails.aspx?PJID=101729">here</a>. 
+							Deadline 23 Jan 2019.</p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+			</div>
+			<!-- /Row -->				
+				
 				<!-- blog -->
 				<div class="col-md-4">
 					<div class="blog">
