--- a/news-aura-joyjit-2018.html
+++ b/news-aura-joyjit-2018.html
@@ -104,7 +104,7 @@
 				<main id="main" class="col-md-9">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/aura-joyjit.JPG" alt="">
+							<img class="img-responsive" src="./img/background1.JPG" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
