--- a/news-aura-joyjit-2018.html
+++ b/news-aura-joyjit-2018.html
@@ -104,8 +104,9 @@
 				<main id="main" class="col-md-9">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/background1.JPG" alt="">
-						</div>
+							<img class="img-responsive" src="./img/wisdom2018schoene.JPG" alt="" width="400">
+						</div>							
+						
 						<div class="blog-content">
 							<ul class="blog-meta">
 								<li><i class="fa fa-user"></i><a href="joyjit.html">Joyjit Chatterjee</a></li>
