--- a/news-aura-joyjit-2018.html
+++ b/news-aura-joyjit-2018.html
@@ -104,7 +104,7 @@
 				<main id="main" class="col-md-9">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/wisdom2018schoene.JPG" alt="" width="400">
+							<img class="img-responsive" src="./img/aura-joyjit.JPG" alt="" width="400">
 						</div>							
 						
 						<div class="blog-content">
