--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- Header -->
 	<header id="home">
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/bowling.jpg');">
+		<div class="bg-img" style="background-image: url('./img/background2.jpg');">
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
