--- a/index.html
+++ b/index.html
@@ -531,6 +531,8 @@ we research interactive systems for dementia.</p>
 					</div>
 				</div>
 				<!-- /blog -->
+						</div>
+				<!-- /blog -->
 				
 				<div class="row">
 				<!-- blog -->
