--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -133,12 +133,20 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/background1.jpg" alt="">
+				</div>
+				
+				<div class="col-sm-5">
 					<img class="img-responsive" src="./img/group1.jpg" alt="" width="400">
 				</div>
 
 				<div class="col-sm-5">
 					<img class="img-responsive" src="./img/group2.jpg" alt="" width="400">
 				</div>
+				
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/background1.jpg" alt="">
+				</div>				
 
 			</div>
 			<!-- /Row -->
