--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -133,11 +133,11 @@
 				<!-- /Section-header -->
 
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/background1.jpg" alt="">
+							<img class="img-responsive" src="./img/group1.jpg" alt="">
 						</div>
 
 						<div class="blog-img">
-							<img class="img-responsive" src="./img/background1.jpg" alt="">
+							<img class="img-responsive" src="./img/group2.jpg" alt="">
 						</div>
 				
 				<div class="col-sm-6">
