--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -118,7 +118,7 @@
 							<a href="luana.html">Luana Mincarelli</a>, and 					
 							<a href="josh.html">Joshua Whiting</a>.</p>
 							
-							<p>All three will be based in our Milner Lab and work on deep learning 
+							<p>All three will be based in our Milner Lab in Robert Blackburn and work on deep learning 
 							projects, interactive systems and knowledge representation and computational biology. </p>							
 					
 						</div>
