--- a/annika.html
+++ b/annika.html
@@ -388,7 +388,7 @@
 									<i class="fa fa-user"></i>
 									<a href="nina.html">Dethlefs, N.</a>
 								</li>
-	
+									<a href="publications/wisdom2018schoene.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>		
 							</ul>
 
 							<ul class="blog-meta">
