--- a/index.html
+++ b/index.html
@@ -388,13 +388,14 @@ we research interactive systems for dementia.</p>
 				<div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
-							<img class="img-responsive" src="./img/nopic.jpg" alt="">
+							<img class="img-responsive" src="./img/luana.jpg" alt="">
 							<div class="overlay">
-											<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+									<div class="team-social">
+									<a href="mailto:mincarelli.luana@gmail.com"><i class="fa fa-envelope"></i></a>
+									<a href="https://scholar.google.it/citations?user=TU1dLFsAAAAJ&hl=it&oi=ao"><i class="fa fa-google"></i></a>
+									<a href="https://www.linkedin.com/in/luanamincarelli/"><i class="fa fa-linkedin-square" ></i></a>									
+									<a href="luana.html"><i class="fa fa-user"></i></a>																											
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
