--- a/publications.html
+++ b/publications.html
@@ -242,6 +242,57 @@
 						<!-- blog tags -->
 
 						<!-- publication entry -->
+						
+	<div class="blog-content">
+							<h3>Indirect effects of climate changes on cadmium bioavailability and biological effects in the Mediterranean mussel Mytilus galloprovincialis.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>Nardi, A.</li>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="luana.html">Mincarelli, L.F.</a>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>Benedetti, M.</li>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>Fattorini, D.</li>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>d'Errico, G.</li>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>Regoli, F.</li>
+								</li>																
+								<li>
+								<a href="https://www.ncbi.nlm.nih.gov/pubmed/27894055"><i class="fa fa-external-link"></i></a>Link to article</li>
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										Despite the great interest in the consequences of climate change on the physiological functioning of marine organisms, indirect and interactive effects of rising temperature and pCO2 on bioaccumulation and responsiveness to environmental pollutants are still poorly explored, particularly in terms of cellular mechanisms. According to future projections of temperature and pH/pCO2, this study investigated the main cellular pathways involved in metal detoxification and oxidative homeostasis in Mediterranean mussels, Mytilus galloprovincialis, exposed for 4 weeks to various combinations of two levels of pH/pCO2 (8.2/∼400 μatm and 7.4/∼3000 μatm), temperature (20 and 25 °C), and cadmium addition (0 and 20 μg/L). Bioaccumulation was increased in metal exposed organisms but it was not further modulated by different temperature and pH/pCO2 combinations. However, interactions between temperature, pH and cadmium had significant effects on induction of metallothioneins, responses of the antioxidant system and the onset of oxidative damages, which was tissue dependent. Multiple stressors increased metallothioneins concentrations in the digestive gland revealing different oxidative effects: while temperature and cadmium enhanced glutathione-dependent antioxidant protection and capability to neutralize peroxyl radicals, the metal increased the accumulation of lipid peroxidation products under acidified conditions. Gills did not reveal specific effects for different combinations of factors, but a general stress condition was observed in this tissue after various treatments. Significant variations of immune system were mainly caused by increased temperature and low pH, while co-exposure to acidification and cadmium enhanced metal genotoxicity and the onset of permanent DNA damage in haemocytes. Elaboration of the whole biomarker data in a cellular hazard index, corroborated the synergistic effects of temperature and acidification which increased the toxicological effects of cadmium. The overall results confirmed that climate change could influence ecotoxicological effects of environmental contaminants, highlighting the importance of a better knowledge of cellular mechanisms to understand and predict responsiveness of marine organisms to such multiple stressors.
+										</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2017. Chemosphere, 169, 493-502.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="bio_health.html#publications">
+									<i class="fa fa-tag"></i>Biology and Health</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+						<!-- publication entry -->							
 
 						<!-- publication entry -->
 
@@ -329,6 +380,7 @@
 						<!-- blog tags -->
 
 						<!-- publication entry -->
+						
 
 						<!-- publication entry -->
 
