--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ we research interactive systems for dementia.</p>
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>Luana Mincarelli</h3>
+							<a href="luana.html"><h3>Luana Mincarelli</h3></a>													
 							<span>PhD Student</span>
 						</div>
 					</div>
