--- a/albert.html
+++ b/albert.html
@@ -104,7 +104,7 @@
 					<div class="blog">
 						<div class="blog-img">
 						<div class="media-left">
-									<img class="media-object" src="./img/albert.jpg" alt="" width="500">
+									<img class="media-object" src="./img/albert2.jpg" alt="" width="500">
 								</div>
 						</div>
 						
