--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ we research interactive systems for dementia.</p>
 				<div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
-							<img class="img-responsive" src="./img/albert.jpg" alt="">
+							<img class="img-responsive" src="./img/albert1.jpg" alt="">
 							<div class="overlay">
 									<div class="team-social">
 									<a href="mailto:a.dulian@2013.hull.ac.uk"><i class="fa fa-envelope"></i></a>
