--- a/albert.html
+++ b/albert.html
@@ -161,6 +161,17 @@
 					<!-- Posts sidebar -->
 					<div class="widget">
 						<h3 class="title">News Stuff</h3>
+
+						<!-- single post -->
+						<div class="widget-post">
+							<a href="news-catapult-joyjit-2018.html">
+								<img src="./img/catapult-post.jpg" alt=""> OREC Catapult in Glasgow
+							</a>
+							<ul class="blog-meta">
+								<li>22 Nov 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->
 						
 						<!-- single post -->
 						<div class="widget-post">
