--- a/alex.html
+++ b/alex.html
@@ -162,6 +162,17 @@ I later returned to the University of York as a research associate in the Intell
 						
 						<!-- single post -->
 						<div class="widget-post">
+							<a href="news-catapult-joyjit-2018.html">
+								<img src="./img/catapult-post.jpg" alt=""> OREC Catapult in Glasgow
+							</a>
+							<ul class="blog-meta">
+								<li>22 Nov 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->						
+						
+						<!-- single post -->
+						<div class="widget-post">
 							<a href="./img/xmas-2018.jpg">
 								<img src="./img/xmas-post.jpg" alt=""> Christmas poster workshop and lunch
 							</a>
