--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -222,6 +222,17 @@
 					<!-- Posts sidebar -->
 					<div class="widget">
 						<h3 class="title">News Stuff</h3>
+
+						<!-- single post -->
+						<div class="widget-post">
+							<a href="news-xmas-2018.html">
+								<img src="./img/xmas-2018-post.jpg" alt=""> Christmas Poster Workshop 2018
+							</a>
+							<ul class="blog-meta">
+								<li>7 Dec 2018</li>
+							</ul>
+						</div>
+						<!-- /single post -->	
 						
 						<!-- single post -->
 						<div class="widget-post">
