--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -170,7 +170,7 @@
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-matt.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-matt2.jpg" alt="" width="400">
 				</div>
 
 			</div>
