--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -166,7 +166,7 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-eva.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-eva2.jpg" alt="" width="400">
 				</div>
 
 				<div class="col-sm-5">
@@ -176,7 +176,7 @@
 			</div>
 			<!-- /Row -->													
 
-							<p>Students received plenty of feedback and questions from both peers and senior researchers of the department and during the break discussions about new research ideas and upcoming projects continued.</p>
+							<p></br>Students received plenty of feedback and questions from both peers and senior researchers of the department and during the break discussions about new research ideas and upcoming projects continued.</p>
 
 
 			<!-- Row -->
