--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -197,11 +197,25 @@
 
 
 			</div>
-			<!-- 	
+			
+			<!-- Row -->
+			<div class="row">
+
+				<!-- Section-header -->
+				<div class="section-header text-center">
+				</div>
+				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-chat1.jpg" alt="" width="200">
-				</div>/Row -->
+					<img class="img-responsive" src="./img/xmas-eva.jpg" alt="" width="400">
+				</div>
+
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/xmas-annika.jpg" alt="" width="400">
+				</div>
+
+			</div>
+			<!-- /Row -->
 
 							<p></br></br>After the poster session, the group walked to a local restaurant for a Christmas dinner and crackers.</br></br></p>							
 							
