--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -211,7 +211,7 @@
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-annika.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-eva.jpg" alt="" width="400">
 				</div>
 
 			</div>
