--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -188,11 +188,11 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-chat2.jpg" alt="" width="500">
+					<img class="img-responsive" src="./img/xmas-chat1.jpg" alt="" width="500">
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-chat1.jpg" alt="" width="500">
+					<img class="img-responsive" src="./img/xmas-annika.jpg" alt="" width="500">
 				</div>
 
 
@@ -207,12 +207,9 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-matt.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-chat2.jpg" alt="" width="400">
 				</div>
 
-				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-eva.jpg" alt="" width="400">
-				</div>
 
 			</div>
 			<!-- /Row -->
