--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -174,7 +174,26 @@
 				</div>
 
 			</div>
-			<!-- /Row -->													
+			<!-- /Row -->
+			
+			<!-- Row -->
+			<div class="row">
+
+				<!-- Section-header -->
+				<div class="section-header text-center">
+				</div>
+				<!-- /Section-header -->
+
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/xmas-annika.jpg" alt="" width="400">
+				</div>
+
+				<div class="col-sm-5">
+					<img class="img-responsive" src="./img/xmas-bda.jpg" alt="" width="400">
+				</div>
+
+			</div>
+			<!-- /Row -->																
 
 							<p></br>Students received plenty of feedback and questions from both peers and senior researchers of the department and during the break discussions about new research ideas and upcoming projects continued.</p>
 
@@ -188,31 +207,16 @@
 				<!-- /Section-header -->
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-chat1.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-chat2.jpg" alt="" width="400">
 				</div>
 
 				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-annika.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-chat1.jpg" alt="" width="400">
 				</div>
 
 
 			</div>
 			
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section-header -->
-				<div class="section-header text-center">
-				</div>
-				<!-- /Section-header -->
-
-				<div class="col-sm-5">
-					<img class="img-responsive" src="./img/xmas-chat2.jpg" alt="" width="600">
-				</div>
-
-
-			</div>
-			<!-- /Row -->
 
 							<p></br></br>After the poster session, the group walked to a local restaurant for a Christmas dinner and crackers.</br></br></p>							
 							
