--- a/index.html
+++ b/index.html
@@ -501,6 +501,25 @@ we research interactive systems for dementia.</p>
 				<div class="row">
 				<!-- blog -->
 
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/xmas-chat4.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="annika.html">Annika</a></li>
+								<li><i class="fa fa-clock-o"></i>7 Dec 2018</li>
+							</ul>
+							<h3>Christmas Poster Workshop</h3>
+							<p>On 7th December the Big Data Analytics Research group gathered for its annual <a href="news-xmas-2018.html">Poster Workshop</a> and Christmas Lunch.</p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
 				<!-- blog -->
 				<div class="col-md-4">
 					<div class="blog">
