--- a/news-xmas-2018.html
+++ b/news-xmas-2018.html
@@ -189,7 +189,7 @@
 				</div>
 
 				<div class="col-sm-6">
-					<img class="img-responsive" src="./img/xmas-chat5.jpg" alt="" width="400">
+					<img class="img-responsive" src="./img/xmas-bda.jpg" alt="" width="400">
 				</div>
 
 			</div>
