--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@ we research interactive systems for dementia.</p>
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="./img/nopic.jpg" alt="">
-							<div class="overlay">
-											<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+								<div class="overlay">
+									<div class="team-social">
+									<a href="mailto:d.n.davis@hull.ac.uk"><i class="fa fa-envelope"></i></a>
+									<a href="https://scholar.google.co.uk/citations?user=yXGpOdUAAAAJ&hl=en"><i class="fa fa-google"></i></a>									
+									<a href="https://www.linkedin.com/in/darryl-davis-1001b91b/?originalSubdomain=uk/"><i class="fa fa-linkedin-square" ></i></a>
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
@@ -291,7 +291,7 @@ we research interactive systems for dementia.</p>
 
 				<!-- /team -->
 				</div>
-
+			
 		<div class="row">
 		
 				<!-- team -->
