--- a/index.html
+++ b/index.html
@@ -439,11 +439,10 @@ we research interactive systems for dementia.</p>
 						<div class="team-img">
 							<img class="img-responsive" src="./img/nopic.jpg" alt="">
 							<div class="overlay">
-											<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+									<div class="team-social">
+									<a href="mailto:Matthew.Hartley-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a>
+									<a href="https://www.linkedin.com/in/matthew-hartley-884a5441/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
@@ -459,11 +458,9 @@ we research interactive systems for dementia.</p>
 						<div class="team-img">
 							<img class="img-responsive" src="./img/nopic.jpg" alt="">
 							<div class="overlay">
-											<!--	<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>-->
+									<div class="team-social">
+									<a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a>
+								</div>
 							</div>
 						</div>
 						<div class="team-content">
