--- a/index.html
+++ b/index.html
@@ -523,6 +523,28 @@ we research interactive systems for dementia.</p>
 				<div class="row">
 				<!-- blog -->
 
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/rnnc2.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="nina.html">Nina</a></li>
+								<li><i class="fa fa-clock-o"></i>20 Dec 2018</li>
+							</ul>
+							<h3>GPU programming for Deep Learning -- Jan 24/25 2019</h3>
+							<p>We are hosting a 2-day GPU and CUDA programming course right after the <a href="https://www.eventbrite.co.uk/e/deep-learning-winter-school-2019-tickets-51874180069">Deep Learning Winter School 2019</a>.
+							The aim is to gain an understanding of GPU hardware and a competence in CUDA GPU programming for scientific applications, 
+							with a particular focus on deep learning.
+							See <a href="https://www.eventbrite.com/e/gpu-programming-for-deep-learning-tickets-53947006950">here</a>
+							for details and registration. </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
 
 				<!-- blog -->
 				<div class="col-md-4">
