--- a/joyjit.html
+++ b/joyjit.html
@@ -273,6 +273,39 @@
 			<main class="section ">
 					<div class="blog">
 					
+		<div class="blog-content">
+							<h3>A Deep Learning Approach Towards Prediction of Faults in Wind Turbines.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="joyjit.html">Chatterjee, J.</a>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>					
+									<a href="http://nldl2019.org/"><i class="fa fa-external-link"></i></a>Link to workshop</li>									
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										With the rising costs of conventional sources of en- ergy, the world is moving towards sustainable energy sources including wind energy. Wind turbines consist of several electrical and mechanical components and experience an enormous amount of irregular loads, making their operational behaviour at times inconsis- tent. Operations and Maintenance (O&M) is a key factor in monitoring such inconsistent behaviour of the turbines in order to predict and prevent any in- cipient faults which may occur in the near future.
+										</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. Extended Abstract in Northern Lights Deep Learning Workshop (NLDL), Tromso, Norway.</li>
+							</ul>
+
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
 			
 		<div class="blog-content">
 							<h3>An Efficient Real-Time Approach for Detection of Parkinson’s Disease.</h3>
