--- a/publications.html
+++ b/publications.html
@@ -112,6 +112,43 @@
 						<!-- publication entry -->
 							<div id="blog" class="section md-padding">
 
+		<div class="blog-content">
+							<h3>Evolutionary acquisition of complex traits in artificial epigenetic networks.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="alex.html">Turner, A.</a>
+								</li>
+											<li><li><i class="fa fa-user"></i>Tyrrell, A.</li></li>	
+									<li><li><i class="fa fa-user"></i>Trefzer, M.</li></li>	
+								<li><li><i class="fa fa-user"></i>Lones, M.</li></li>										
+							</ul>
+						<a href="https://www.sciencedirect.com/science/article/pii/S0303264718301850"><i class="fa fa-external-link"></i></a>Link to article</li>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										How complex traits arise within organisms over evolutionary time is an important question that has relevance both to the understanding of biological systems and to the design of bio-inspired computing systems. This paper investigates the process of acquiring complex traits within epiNet, a recurrent connectionist architecture capable of adapting its topology during execution. Inspired by the biological processes of gene regulation and epigenetics, epiNet captures biological organisms’ ability to alter their regulatory topologies according to environmental stimulus. By applying epiNet to a series of computational tasks, each requiring a range of complex behaviours to solve, and capturing the evolutionary process in detail, we can show not only how the physical structure of epiNet changed when acquiring complex traits, but also how these changes in physical structure affected its dynamic behaviour. This is facilitated by using a lightweight optimisation method which makes minor iterative changes to the network structure so that when complex traits emerge for the first time, a direct lineage can be observed detailing exactly how they evolved. From this we can build an understanding of how complex traits evolve and which regulatory environments best allow for the emergence of these complex traits, pointing us towards computational models that allow more swift and robust acquisition of complex traits when optimised in an evolutionary computing setting.
+										</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. Biosystems 176.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="evolutionary_algorithms.html#publications">
+									<i class="fa fa-tag"></i>Evolutionary Algorithms</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+
 						<div class="blog-content">
 							<h3>Evolutionary Constraint in Artificial Gene Regulatory Networks.</h3>
 							<ul class="blog-meta">
