--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@ we research interactive systems for dementia.</p>
 							<div class="overlay">
 									<div class="team-social">
 									<a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a>
+									<a href="mailto:e.sousa-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a>
 									<a href="eva.html"><i class="fa fa-user"></i></a>										
 								</div>
 							</div>
