--- a/eva.html
+++ b/eva.html
@@ -88,6 +88,7 @@
 		</div>
 		<!-- /header wrapper -->
 
+								
 	</header>
 	<!-- /Header -->
 
@@ -110,6 +111,7 @@
 						
 						<div class="blog-content">
 							<ul class="blog-meta">
+								<li><a href="mailto:e.sousa-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a></li>							
 								<li><a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a></li>	
 							</ul>
 						</div>
