--- a/natural.html
+++ b/natural.html
@@ -158,6 +158,17 @@
 						
 						<!-- single post -->
 						<div class="widget-post">
+							<a href="http://auracdt.hull.ac.uk/">
+								<img src="./img/cdt-post.jpg" alt=""> Aura Centre for Doctoral Training in Offshore Wind
+							and the Environment</a>
+							<ul class="blog-meta">
+								<li>4 Feb 2019</li>
+							</ul>
+						</div>
+						<!-- /single post -->						
+						
+						<!-- single post -->
+						<div class="widget-post">
 							<a href="https://www.eventbrite.com/e/gpu-programming-for-deep-learning-tickets-53947006950">
 								<img src="./img/rnnc2-post.jpg" alt=""> GPU programming for deep learning - 24/25 Jan.
 							</a>
@@ -222,16 +233,6 @@
 						</div>
 						<!-- /single post -->
 
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="https://jobs.hull.ac.uk/Vacancy.aspx?ref=FS0392">
-								<img src="./img/epi-post.jpg" alt=""> PDRA in Transparent AI - closes 15 Nov.
-							</a>
-							<ul class="blog-meta">
-								<li>22 Oct 2018</li>
-							</ul>
-						</div>
-						<!-- /single post -->
 
 						<a href="index.html#news"> --- ALL NEWS --- </a>						
 					</div>
