--- a/index.html
+++ b/index.html
@@ -583,9 +583,10 @@ we research interactive systems for dementia.</p>
 								<li><i class="fa fa-clock-o"></i>22-25 Jan 2019</li>
 							</ul>
 							<h3>Deep Learning Week 2019</h3>
-							<p>We had over a 100 participants at our annual Deep Learning week including 4 brilliant external speakers.
-							See <a href="news-deep-learning-2019.html">our write-up</a> of our Deep Learning Winter School 2019 and GPU
-							programming workshop.</p>
+							<p>We had over a 100 participants at our annual Deep Learning week including 4 brilliant external speakers, 
+							see <a href="https://www.eventbrite.co.uk/e/deep-learning-winter-school-2019-tickets-51874180069">here</a> and <a href="https://www.eventbrite.com/e/gpu-programming-for-deep-learning-tickets-53947006950">here</a>
+							for our programmes. Thanks to everyone who attended, participated and contributed.
+						</p>
 						</div>
 					</div>
 				</div>
@@ -602,11 +603,10 @@ we research interactive systems for dementia.</p>
 								<li><i class="fa fa-user"></i><a href="nina.html">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>4 Feb 2019</li>
 							</ul>
-							<h3>Centre for Doctoral Training in Offshore Wind</h3>
-							<p>We are part of Hull's new £5.5 million worth EPSRC and NERC-funded CDT in Offshore Wind together with partners Durham, Newcastle and Sheffield.
-							Picture and announcement at <a href="https://nerc.ukri.org/press/releases/2019/05-cdt/">NERC</a>
-							and <a href="https://www.hull.ac.uk/work-with-us/more/media-centre/news/2019/bid-win-for-aura.aspx/">Uni Hull</a>. We're now
-							busy preparing a data analytics module for the Sep 2019 intake.</p>
+							<h3>Aura Centre for Doctoral Training in Offshore Wind and the Environment</h3>
+							<p>We are part of Hull's new £5.5 million worth EPSRC and NERC-funded CDT in Offshore Wind and the Environment together with partners Durham, Newcastle and Sheffield.
+							Picture and announcement at <a href="https://nerc.ukri.org/press/releases/2019/05-cdt/">NERC</a>.
+							See <a href="https://auracdt.hull.ac.uk">here</a> for website and PhD student recruitment.</p>
 						</div>
 					</div>
 				</div>
