--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ we research interactive systems for dementia.</p>
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>Riccardo Cosatelli</h3>
+							<h3>Dr Ric Colasanti</h3>
 							<span>Postdoctoral Researcher</span>
 						</div>
 					</div>
